bug on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,11 @@ body {
   .btnav { display: none; }
 }
 
+.box {
+  height: 100%;
+  overflow-y: auto;
+}
+
 .navbar {
   height: 55px;
   background-color: #1b9f9d;
@@ -143,6 +148,7 @@ body {
   text-align: center;
   padding-left: 3%;
   padding-right: 3%;
+  margin-bottom: 70px;
 }
 
 a {
